--- a/frontend/src/styles/inventoryDashboard.css
+++ b/frontend/src/styles/inventoryDashboard.css
@@ -8,8 +8,8 @@
 
 /* Dashboard Content */
 .dashboard-content {
-    padding: 20px;
-    background-color: #f4f4f4;
+    display: flex;
+    height: 100vh;
     transition: all 0.3s ease-in-out;
 }
 
@@ -94,7 +94,8 @@
     overflow-x: auto; /* Allow horizontal scrolling if needed */
     top: 115px;
     margin-left: 15px;
-    margin-top: 12px;
+    margin-top: 11.5px;
+    margin-right: 15px;
 }
 
 /* Adjust when sidebar is collapsed */
