--- a/frontend/src/styles/menuInventory.css
+++ b/frontend/src/styles/menuInventory.css
@@ -60,6 +60,7 @@
 .sidebar ul li:hover,
 .sidebar ul .active {
     background-color: #d32f2f;
+
 }
 
 .sidebar ul .logout {
@@ -87,6 +88,7 @@
     left: 240px;
     top: 0px;
     transition: left 0.3s ease-in-out;
+    margin-top: 1%;
 }
 
 /* Move Menu Button When Sidebar Collapses */
@@ -146,3 +148,16 @@
     margin-left: 9%;
 }
 
+/* H2 Heading Style */
+h2 {
+    font-size: 24;
+    font-weight: bold;
+    text-align: left;
+
+  }
+  
+  /* H3 Heading Style */
+  h3 {
+    font-size: 90%;
+    font-weight: 600;
+  }
